<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context="com.example.picmymedcode.View.SignUpActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/patientButton"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="50dp"
        android:text="@string/are_you_a"
        android:textSize="25sp" />

    <Button
        android:id="@+id/patientButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_box"
        android:gravity="center"
        android:text="@string/patient" />

    <Button
        android:id="@+id/careProviderButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patientButton"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_box"
        android:text="@string/care_provider" />

</RelativeLayout>

