<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="6dp">

    <TextView
        android:id="@+id/record_problem_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/Enter_Record_Details"
        android:textColor="#16BBE5"
        android:textSize="26dp" />

    <EditText
        android:id="@+id/record_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record_problem_title_text_view"
        android:hint="@string/Add_Title"
        android:paddingLeft="10dp"
        android:textColor="#16BBE5"
        android:textColorHint="#D3D3D3" />

    <EditText
        android:id="@+id/record_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record_title_edit_text"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:hint="@string/Add_Description"
        android:inputType="textCapSentences|textMultiLine"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textColor="#16BBE5"
        android:textColorHint="#D3D3D3" />

    <Button
        android:id="@+id/record_camera_button"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record_description_edit_text"
        android:layout_marginLeft="10dp"
        android:paddingTop="10dp"
        android:background="@drawable/baseline_camera_alt_black_18dp" />

    <TextView
        android:id="@+id/photoCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/record_description_edit_text"
        android:layout_marginLeft="-3dp"
        android:layout_marginTop="-1dp"
        android:layout_toRightOf="@+id/record_camera_button"
        android:paddingTop="20dp"
        android:text="@string/photoCount"
        android:paddingLeft="10dp"
        android:textSize="20sp"
        android:textColor="#16BBE5" />

    <Button
        android:id="@+id/record_geo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_text"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/centerPoint"
        android:background="@drawable/box_with_outline"
        android:padding="20dp"
        android:text="@string/Geolocation"
        android:textColor="#16BBE5" />

    <ImageView
        android:id="@+id/locationImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/location_white"
        android:layout_below="@id/record_camera_button"
        android:paddingLeft="20dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:tint="#000"/>

    <TextView
        android:id="@+id/location_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="203dp"
        android:layout_toRightOf="@+id/locationImage"
        android:text="NO GEOLOCATION ADDED "
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#16BBE5" />

    <Button
        android:id="@+id/bodyLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_text"
        android:layout_marginBottom="5dp"
        android:layout_toLeftOf="@+id/centerPoint"
        android:background="@drawable/box_with_outline"
        android:padding="20dp"
        android:text="@string/Body_Location"
        android:textColor="#16BBE5" />

    <TextView
        android:id="@+id/centerPoint"
        android:layout_width="10dip"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="" />

    <Button
        android:id="@+id/record_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/bodyLocation"
        android:background="@drawable/signupbtn1"
        android:paddingHorizontal="50dp"
        android:text="@string/Add" />


</RelativeLayout>